# code-samples

./: LICENSE  Maintainer.md  README.md
AI/: readme.txt
AI/A2A/: README.md  pom.xml  readme.txt
Cadence/: README.md
Cadence/CadenceDroneDeliveryDemo/: DroneDeliveryApp3.java  DroneDeliveryDemoApp.java  DroneMaths.java  README.md
CadenceDroneDeliveryDemo/: CommonProps.java  CreateOrderWFConsumer.java  DroneDeliveryApp2.java  DroneDeliveryAppOriginal.java  DroneMaths.java  LatLon.java  createOrdersProducer.java
CadenceKafka/: BlogCadenceKafkaExample_Cadence.java  BlogCadenceKafkaExample_KafkaConsumer.java  README.md
CadenceKafkaDroneDeliveryDemo/: CommonProps.java  CreateOrderWFConsumer.java  CreateOrdersProducer.java  README.md  consumer.properties  dronepaths.html
ClickHouse/: README.md
Kafka/: README.md
Kafka/KIP-1034-blog/: pom.xml  (+3 more)
KafkaConnectPostgresqlSinkConnector/: README.md
KafkaML/: 2weeksNoTime.csv  README.md  drift_2weeks_V2.csv
MCP-Gateway/: README.md
MCP-Gateway/shoe-store-support-chatbot/: README.md  config.example.json  example_mcp_server.py  pyproject.toml
MCP-Gateway/shoe-store-support-chatbot/src/shoe_bot/: __init__.py  app.py  async_runtime.py  bedrock_agent.py  config.py  mcp_manager.py
Postgres/: README.md
Postgres-ANF/: notice.txt
Zookeeper/: README.md
data-processing-pipeline/: README.md  blog1_source_connector_config.txt  blog2_elasticsearch_mapping.txt  blog2_ingest_pipeline.txt  blog3_elasticsearch_strict.txt  blog5_elasticsearch_change_default_shards.txt
zookeeper-meets-Dining-Philosophers/: README.txt  pom.xml
(+138 files in other folders)
