[project]
name = "shoe-bot"
version = "0.1.0"
description = "Streamlit chatbot powered by AWS Bedrock with MCP server support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "mcp>=1.8.0",
    "pydantic>=2.0.0",
    "streamlit>=1.40.0",
]

[project.scripts]
shoe-bot = "shoe_bot.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shoe_bot"]

[dependency-groups]
dev = ["ruff>=0.8.0"]
